add sm, md and lg file for media queries

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
+<link href="css/styles-sm.css" media="(min-width: 768px)" rel="stylesheet">
+<link href="css/styles-md.css" media="(min-width: 992px)" rel="stylesheet">
+<link href="css/styles-lg.css" media="(min-width: 1200px)" rel="stylesheet">
   <title>Restaurant Reviews</title>
 </head>
 
