--- a/restaurant.html
+++ b/restaurant.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
+<link href="css/styles-sm.css" media="(min-width: 768px)" rel="stylesheet">
+<link href="css/styles-md.css" media="(min-width: 992px)" rel="stylesheet">
+<link href="css/styles-lg.css" media="(min-width: 1200px)" rel="stylesheet">
   <title>Restaurant Info</title>
 </head>
 
