--- a/index.html
+++ b/index.html
@@ -4,36 +4,36 @@
 <head>
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
-<link href="css/styles-sm.css" media="(min-width: 768px)" rel="stylesheet">
-<link href="css/styles-md.css" media="(min-width: 992px)" rel="stylesheet">
-<link href="css/styles-lg.css" media="(min-width: 1200px)" rel="stylesheet">
+  <link href="css/styles-sm.css" media="(min-width: 768px)" rel="stylesheet">
+  <link href="css/styles-md.css" media="(min-width: 992px)" rel="stylesheet">
+  <link href="css/styles-lg.css" media="(min-width: 1200px)" rel="stylesheet">
   <title>Restaurant Reviews</title>
 </head>
 
 <body>
   <header>
-    <nav>
+    <nav aria-label="Navigation" >
       <h1>
-        <a href="/">Restaurant Reviews</a>
+        <a role="link" href="/">Restaurant Reviews</a>
       </h1>
     </nav>
   </header>
 
-  <main id="maincontent">
-    <section id="map-container">
-<div id="map" title="Google Maps" role="application"></div>
+  <main id="maincontent" aria-label="Page main content">
+    <section id="map-container" aria-level="Map Container">
+      <div id="map" title="Google Maps" role="application"></div>
     </section>
-    <section>
+<section aria-labelledby="filter-options">
       <div class="filter-options">
         <h2>Filter Results</h2>
-        <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+        <select aria-label="Neighborhoods select" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+        <select aria-label="Cuisines select" id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
           <option value="all">All Cuisines</option>
         </select>
       </div>
-      <ul id="restaurants-list"></ul>
+      <ul aria-label="Restaurant list" id="restaurants-list"></ul>
     </section>
   </main>
 
