--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -22,10 +22,10 @@
   </header>
 
   <main id="maincontent" aria-label="Page main content">
-    <section id="map-container" aria-level="Map Container">
+    <section id="map-container" aria-label="Map Container">
       <div id="map" title="Google Maps" role="application"></div>
     </section>
-<section aria-labelledby="filter-options">
+<section aria-label="filter-options">
       <div class="filter-options">
         <h2>Filter Results</h2>
         <select aria-label="Neighborhoods select" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
