--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,7 @@
 
 <body>
   <header>
-    <nav aria-label="Navigation" >
+    <nav aria-label="Navigation">
       <h1>
         <a role="link" href="/">Restaurant Reviews</a>
       </h1>
@@ -26,7 +27,7 @@
     <section id="map-container" aria-label="Map Container">
       <div id="map" title="Google Maps" role="application"></div>
     </section>
-<section aria-label="filter-options">
+    <section aria-label="filter-options">
       <div class="filter-options">
         <h2>Filter Results</h2>
         <select aria-label="Neighborhoods select" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
@@ -44,6 +45,20 @@
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZN60kGcOhlZBl2XRduZIlpnjf--X63Bg&libraries=places&callback=initMap"></script>
 
+
+   <!-- Script goes just before </body>-->
+  <!--Script from https://varvy.com/pagespeed/defer-images.html-->
+  <script>
+    function init() {
+      var imgDefer = document.getElementsByTagName('img');
+      for (var i = 0; i < imgDefer.length; i++) {
+        if (imgDefer[i].getAttribute('data-src')) {
+          +imgDefer[i].setAttribute('src', imgDefer[i].getAttribute('data-src'));
+        }
+      }
+    }
+    window.onload = init;
+  </script>
 
   <footer id="footer">
     Copyright (c) 2017
