--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="css/styles-sm.css" media="(min-width: 768px)" rel="stylesheet">
   <link href="css/styles-md.css" media="(min-width: 992px)" rel="stylesheet">
   <title>Restaurant Reviews</title>
+  <meta name="description" content="This is an example of a meta description. This will often show up in search results.">
 </head>
 
 <body>
